# PHM_rebuild

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/nidaq-agent/: README.md
agents/opcua-agent/: README.md
apps/api/: README.md
apps/worker/: README.md
db/migrations/: 0001_initial.sql  README.md
db/seeds/: README.md
docs/: README.md  acquisition-contract.md  architecture.md  data-model.md  health-engine.md  migration-from-legacy.md  product-scope.md  worker.md
docs/operations/: database.md  development.md
tests/: conftest.py
tests/contract/: test_schemas.py
tests/integration/: test_postgres.py
tests/unit/: test_baseline.py  test_domain.py  test_evaluation_service.py  test_migrate.py  test_migration_policy.py  test_postgres_repository.py
tools/: migrate.py
