[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phm-rebuild"
version = "0.1.0"
description = "Clean-room machine health evidence platform"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jsonschema>=4.19"]

[tool.setuptools]
packages = ["phm_domain", "phm_health_core", "phm_application", "phm_persistence"]

[tool.setuptools.package-dir]
phm_domain = "packages/domain/src/phm_domain"
phm_health_core = "packages/health-core/src/phm_health_core"
phm_application = "packages/application/src/phm_application"
phm_persistence = "packages/persistence/src/phm_persistence"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
